--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
          <center> <h1>NTHONY EDWARD STARK</h1> </center>
      </header> <br>
       <center>      
-      <img src="https://i.ibb.co/KLd2w2Y/Tony-Stark.jpg" alt="Tony Stark Profile picture">
+      <img src="https://i.ibb.co/KLd2w2Y/Tony-Stark.jpg" alt="Tony Stark Profile picture" style="width:100%">
       <h1>TONY STARK</h1>
       <p style="font-family: 'Beth Ellen'"; >If we can't accept limitations, we are boundaryless, we are no better than the bad guys.</p>
       <p>
