--- a/index.html
+++ b/index.html
@@ -35,11 +35,11 @@
   </head>
   <body style="background-color:#1b1b1b; color: #f5f5f5;">
      <header>
-         <img src="https://i.ibb.co/J5txsNX/877px-Symbol-from-Marvel-s-The-Avengers-logo-svg.png" alt="Avengers Logo" width="60px" height="70px">
+         <img src="https://i.imgur.com/AOjfK8R.png" alt="Avengers Logo" width="60px" height="70px">
          <center> <h1>NTHONY EDWARD STARK</h1> </center>
      </header> <br>
       <center>      
-      <img src="https://i.ibb.co/KLd2w2Y/Tony-Stark.jpg" alt="Tony Stark Profile picture" style="width:100%">
+      <img src="https://i.imgur.com/ziBHqmU.jpg" alt="Tony Stark Profile picture" style="width:100%">
       <h1>TONY STARK</h1>
       <p style="font-family: 'Beth Ellen'"; >If we can't accept limitations, we are boundaryless, we are no better than the bad guys.</p>
       <p>
