--- a/index.html
+++ b/index.html
@@ -7,39 +7,17 @@
       <link href="https://fonts.googleapis.com/css?family=Roboto+Mono&display=swap" rel="stylesheet">
       <link href="https://fonts.googleapis.com/css?family=Beth+Ellen&display=swap" rel="stylesheet">
       <link href="https://fonts.googleapis.com/css?family=Exo+2&display=swap" rel="stylesheet">
-      <style>
-          header
-          {
-             display: flex;
-             font-family: 'Exo 2', sans-serif;
-             justify-content: center;
-             padding: 5px;
-             background-color: #424242;
-             color: #f5f5f5;
-          }
-          body
-          {
-              font-family: 'Roboto Mono', monospace;
-          }
-          footer 
-          {
-             display: flex;
-             font-family: 'Beth Ellen', cursive;
-             justify-content: center;
-             padding: 5px;
-             background-color: #424242;
-             color: #f5f5f5;
-          }
-      </style>
+      <link rel="stylesheet" type="text/css" href="CSS/style.css">
       <title>❮ Mr.Stark ❯</title>
   </head>
-  <body style="background-color:#1b1b1b; color: #f5f5f5;">
+  <body>
+        <center><img src="https://i.imgur.com/AOjfK8R.png" alt="Avengers Logo" width="60px" height="70px">
      <header>
-         <img src="https://i.imgur.com/AOjfK8R.png" alt="Avengers Logo" width="60px" height="70px">
-         <center> <h1>NTHONY EDWARD STARK</h1> </center>
+            <h1>ANTHONY EDWARD STARK</h1> 
+            </center>
      </header> <br>
       <center>      
-      <img src="https://i.imgur.com/ziBHqmU.jpg" alt="Tony Stark Profile picture" style="width:100%">
+      <img src="https://res.cloudinary.com/brothor/image/upload/c_scale,h_1080,q_auto:eco,w_1920/v1566285537/Tony-Stark-Cyberpunk.jpg" alt="Tony Stark Profile picture" style="width:100%">
       <h1>TONY STARK</h1>
       <p style="font-family: 'Beth Ellen'"; >If we can't accept limitations, we are boundaryless, we are no better than the bad guys.</p>
       <p>
@@ -53,6 +31,7 @@
          Approved by <em>Steve Rogers</em> as Earth's Best defender.<br> I Am the one who insisted that we 
          need a suit of armor around the World, whether it impacted our "precious freedom" or not.
       </p>
+      <br>
       <hr>
       <h2>Titles</h2>
       <ul>
@@ -69,9 +48,11 @@
           <li>Car Collection</li>
           <p><a href="hobbiesoftony.html">And also....</a></p>
       </ul>
+      <br>
       <hr>
-      <center><h2>My Adventures as Iron Man</h2></center>
-      <table cellspacing="12" border="1">
+      <br>
+      <table cellspacing="12" border="1" class="adventure">
+          <caption><center><h2>My Adventures as Iron Man</h2></center></caption>
           <thead>
               <th>Year</th>
               <th>Cause</th>
@@ -99,8 +80,8 @@
               </tr>
               <tr>
                   <td>2010</td>
-                  <td>Unstable blood toxicity by leakage due to arc reactor in chest</td>
-                  <td>Created a New Element(Badassium) to replace the core of Arc Reactor</td>
+                  <td>Unstable blood toxicity due to Palladium decay in the core of arc reactor in chest</td>
+                  <td>Created a New Element(Vibranium) to replace the core of Arc Reactor</td>
                   <td>Creation of new Element</td>
               </tr>
               <tr>
@@ -111,18 +92,18 @@
               </tr>
               <tr>
                   <td>2013</td>
-                  <td>House got destroyed by an Evil organization A.I.M lead by Aldrick kilian who also kidnapped my ❤️ and injected her with Extremis</td>
-                  <td>Summoned each and every Suit of armor i had to bring A.I.M down and to save my ❤️ in the process also saved POTUS</td>
+                  <td>House got destroyed by an Evil organization A.I.M lead by Aldrich kilian who also kidnapped my ❤️ and injected her with Extremis</td>
+                  <td>Summoned each and every Suit of armor i created to bring A.I.M down and to save my ❤️ in the process also saved POTUS</td>
                   <td>Clean Slate Protocol</td>
               </tr>
               <tr>
                   <td>2015</td>
                   <td>The world getting taken over by Artificial Inteligence (Ultron) which i may or may not be created</td>
                   <td>Another Avengers mission with couple of extra Avengers which also includes a Artificially intelligent Bio machine AKA Vision to prevet AI take over</td>
-                  <td>Age of Ultron</td>
+                  <td>Ultron Uprising</td>
               </tr>
               <tr>
-                  <td>2015 - 2018</td>
+                  <td>2015-2018</td>
                   <td>Much more causes like break up of Avengers</td>
                   <td>Much more things i did like taking Spider-Man under my wing</td>
                   <td>Tony as Always</td>
@@ -155,17 +136,19 @@
                   <td>2023</td>
                   <td>If you mess with time it tends to mess back; Mad Titan returns from past to destroy all life on the Universe</td>
                   <td>Part of the biggest alien battle ever in Earth since Battle of New York with Avengers and many more. Wielded all six Infinity Stones and dusted Thanos away by snapping the fingers, which turns out to be my Final Battle.</td>
-                  <td>And I... Am Iron Man</td>
+                  <td>And I... Am... Iron Man</td>
               </tr>
           </tbody>
       </table>
+      <br>
       <hr>
+      <br>
       <center>
-      <h2>Event Ratings</h2>
-      <table cellspacing="15">
+        <table cellspacing="15" width="80%">
+            <caption><strong>Event Ratings</strong></caption>
           <tr>
               <td>
-                    <table cellspacing="15" >
+                    <table cellspacing="15">
                             <tr>
                                 <td>Mark I</td>
                                 <td>⭐⭐⭐⭐⭐</td>
@@ -191,7 +174,7 @@
                                 <td>⭐⭐⭐⭐⭐</td>
                             </tr>
                             <tr>
-                                <td>Age of Ultron</td>
+                                <td>Ultron Uprising</td>
                                 <td>⭐⭐⭐⭐</td>
                             </tr>
                         </table>
@@ -219,7 +202,7 @@
                           <td>⭐⭐⭐⭐⭐</td>
                       </tr>
                       <tr>
-                          <td>And I... Am Iron Man</td>
+                          <td>And I... Am... Iron Man</td>
                           <td>⭐⭐⭐⭐⭐</td>
                       </tr>
                   </table>
@@ -228,7 +211,7 @@
       </table>
       </center>
       <center>
-      <h3>Keep in touch with me</h3>
+      <h3>Keep in touch with me; Will you?</h3>
       <form action="mailto:tony@stark.com" method="POST" enctype="text/plain">
           <label for="name">Name</label>
           <input type="text" name="name" id="name" placeholder="Your Good Name" required><br>
@@ -251,7 +234,9 @@
               <option value="teamcap">Falcon</option>
               <option value="teamcap">Hawkeye</option>
               <option value="teamcap">Scarlett Witch</option>
-              <option value="teamcap">Ant-Man</option> 
+              <option value="teamcap">Ant-Man</option>
+              <option value="others">Thor</option>
+              <option value="others">Hulk</option> 
               <option value="others">Doctor Strange</option>    
           </select><br>
   
@@ -263,6 +248,6 @@
       </center><br>
     </body>
     <footer>
-        <p>We ❤️ you 3000</p>
+        <p>i ❤️ you 3000</p>
     </footer>
 </html>
