--- a/hobbiesoftony.html
+++ b/hobbiesoftony.html
@@ -3,17 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <link href="https://fonts.googleapis.com/css?family=Roboto+Mono&display=swap" rel="stylesheet">
-    <style>
-        body
-        {
-            font-family: 'Roboto Mono', monospace;
-        }
-    </style>
+    <link rel="stylesheet" type="text/css" href="CSS/style.css">
     <title>Hobbies</title>
 </head>
-<body style="background-color:#1b1b1b; color: #f5f5f5;">
+<body>
     <ul>
         <li>Saving the World</li>
     </ul>
+    <a href="index.html">Go back</a>
 </body>
 </html>
