--- a/titlesoftony.html
+++ b/titlesoftony.html
@@ -3,17 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <link href="https://fonts.googleapis.com/css?family=Roboto+Mono&display=swap" rel="stylesheet">
-    <style>
-        body
-        {
-            font-family: 'Roboto Mono', monospace;
-        }
-    </style>
-    <title>Titles of Tony</title>
+    <link rel="stylesheet" type="text/css" href="CSS/style.css">
 </head>
-<body style="background-color:#1b1b1b; color: #f5f5f5;">
+<body>
     <ul>
         <li>Tony <em>Stank</em></li>
     </ul>
+    <a href="index.html">Go Back</a>
 </body>
 </html>
