--- a/index.html
+++ b/index.html
@@ -241,8 +241,8 @@
           </select><br>
   
           <label for="selection">Click Yes if you selected me!</label>
-          <input type="radio" name="Iron Man" id="selection">Yes
-          <input type="radio" name="Not Iron Man" id="selection">No <br>
+          <input type="radio" name="Iron Man" id="Iron Man">Yes
+          <input type="radio" name="Not Iron Man" id="Not Iron Man">No <br>
           <input type="submit">
       </form>
       </center><br>
